# kmer-cnt

./: README.md  count.sh
kc/: Cargo.toml
kc-py/: Cargo.toml  README.md
kc-py-mod/: Cargo.toml
kc-py-mod/src/: main.rs
kc-py-mod2/: Cargo.toml
kc-py-mod2/src/: main.rs
kc-py/src/: main.rs
kc/src/: main.rs
