[package]
name = "kc-py-mod2"
version = "0.1.0"
authors = ["Seth Stadick <sstadick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rayon = "1.3.0"
crossbeam-channel = "0.4"
crossbeam = "0.7.3"
